Fixed wrong test results of fast/js/custom-constructors.html https://bugs.webkit.org/show_bug.cgi?id=71669

Reviewed by Darin Adler.

According to the HTMLOptionElement spec
(http://dev.w3.org/html5/spec/the-button-element.html#the-option-element),
'text', 'label' and 'value' have neither [TreatUndefinedAs=EmptyString]
nor [TreatNullAs=EmptyString]. Thus, an undefined value should be
converted to a string "undefined" and a null value should be
converted to a string "null", following the step 3 of the IDL
conversion spec (http://dev.w3.org/2006/webapi/WebIDL/#es-DOMString).

Source/WebCore:

* bindings/js/JSOptionConstructor.cpp:
(WebCore::constructHTMLOptionElement): Removed isUndefined() check from 'text' and 'value' since the spec does not have [TreatUndefinedAs=EmptyString].
* bindings/v8/custom/V8HTMLOptionElementConstructor.cpp:
(WebCore::v8HTMLOptionElementConstructorCallback): Ditto.
* html/HTMLOptionElement.idl: Removed [ConvertNullToNullString] from 'text', 'label' and 'value' since the spec does not have [TreatNullAs=EmptyString].

LayoutTests:

* fast/dom/element-attribute-js-null-expected.txt: Fixed the test result.
* fast/dom/element-attribute-js-null.html: Ditto.
* fast/js/custom-constructors-expected.txt: Ditto.
* fast/js/script-tests/custom-constructors.js: Ditto.


Canonical link: https://commits.webkit.org/88083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99510 268f45cc-cd09-0410-ab3c-d52691b4dbfc